# bichon

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  funding.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: release.yml
crates/admin/: Cargo.toml
crates/admin/src/: main.rs  meta.rs
crates/blob/src/: account.rs  cache.rs  engine.rs  file_pool.rs  lib.rs  meta.rs  recovery.rs  segment.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  main.rs  sender.rs
crates/cli/src/api/: download.rs  mod.rs  search.rs  stats.rs
crates/cli/src/eml/: mod.rs
crates/cli/src/export/: mod.rs
crates/cli/src/mbox/: gmail.rs  mod.rs  reader.rs
crates/cli/src/pst/: mod.rs
crates/cli/src/thunderbird/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/account/: entity.rs  grant.rs  migration.rs  mod.rs  old_state.rs  payload.rs  since.rs  state.rs  stats.rs  view.rs
crates/core/src/admin/: meta.rs  mod.rs
crates/core/src/autoconfig/: entity.rs  load.rs  mod.rs  tests.rs
crates/core/src/cache/: mod.rs
crates/core/src/common/: auth.rs  mod.rs  paginated.rs  periodic.rs  rustls.rs  signal.rs
crates/core/src/context/: controller.rs  executors.rs  mod.rs
crates/core/src/dashboard/: mod.rs
crates/core/src/database/: manager.rs  mod.rs
crates/core/src/envelope/: extractor.rs  meta.rs  mod.rs  utils.rs
crates/core/src/error/: code.rs  mod.rs
crates/core/src/imap/: capabilities.rs  client.rs  executor.rs  manager.rs  mod.rs  oauth2.rs  session.rs  stats.rs  tests.rs
crates/core/src/import/: mod.rs
crates/core/src/logger/: file.rs  mod.rs
crates/core/src/mailbox/: delete.rs  list.rs  (+1 more)
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/smtp/: Cargo.toml
crates/smtp/src/: lib.rs  server.rs  stream.rs  tests.rs  tls.rs
docker/: Dockerfile  entrypoint.sh
env/: bichon.env  rustmailer.env
src/: main.rs
src/modules/: mod.rs
src/modules/account/: grant.rs  migration.rs  payload.rs  view.rs
src/modules/blob/: envelope.rs  manager.rs  mod.rs  storage.rs
src/modules/cli/: auth.rs  mod.rs  sender.rs
src/modules/common/: auth.rs  mod.rs  periodic.rs  rustls.rs  signal.rs  timeout.rs
src/modules/context/: executors.rs  mod.rs  status.rs
src/modules/dashboard/: mod.rs
src/modules/database/: manager.rs  mod.rs
src/modules/duckdb/: build.rs  init.rs  mod.rs  refinery.rs  tests.rs
src/modules/envelope/: extractor.rs
src/modules/error/: mod.rs
src/modules/imap/: capabilities.rs  client.rs  executor.rs  manager.rs  mod.rs  pool.rs  tests.rs
src/modules/import/: mod.rs
src/modules/indexer/: envelope.rs  fields.rs  manager.rs  schema.rs
src/modules/logger/: mod.rs
src/modules/mailbox/: delete.rs  list.rs  mod.rs
src/modules/message/: append.rs  attachment.rs  contacts.rs  content.rs  delete.rs  list.rs  mod.rs  search.rs  tags.rs
src/modules/oauth2/: entity.rs  task.rs
src/modules/rest/: mod.rs
src/modules/settings/: cli.rs  dir.rs  io.rs  mod.rs
src/modules/smtp/: mod.rs  server.rs  stream.rs  tests.rs  tls.rs
src/modules/store/: storage.rs
src/modules/tasks/: mod.rs
src/modules/token/: mod.rs
src/modules/users/: minimal.rs  mod.rs  payload.rs  permissions.rs  role.rs
src/modules/utils/: encrypt.rs  html.rs  mod.rs  net.rs  tls.rs
web/: package.json
web/src/: i18n.ts  index.css  routeTree.gen.ts
web/src/api/: axiosInstance.ts  index.ts
web/src/components/: date-picker.tsx  language-switch.tsx  pagination.tsx  sign-out-dialog.tsx  virtualized-select.tsx
web/src/hooks/: use-attachment-metadata.ts  use-available-tags.ts  use-contacts.ts  use-current-user.ts  use-search-messages.ts  use-update-tags.ts
web/src/lib/: build-tree.ts  utils.ts
web/src/locales/: ar.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  jp.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  zh-tw.json  zh.json
(+223 files in other folders)
