[package]
name = "bichon"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bichon"
path = "src/main.rs"

[[bin]]
name = "bichonctl"
path = "src/bin/bichonctl.rs"

[[bin]]
name = "bichon-admin"
path = "src/bin/bichon_admin.rs"


[features]
default = []
vendored-openssl = ["openssl-sys"]

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
mimalloc = "0.1.48"
native_db = "0.8.2"
itertools = "0.14.0"
native_model = "0.4.20"
poem = { version = "3.1.12", features = ["embed", "compression", "rustls"] }
poem-derive = "3.1.12"
poem-openapi = { version = "5.1.16", features = [
    "openapi-explorer",
    "rapidoc",
    "scalar",
    "redoc",
    "swagger-ui",
    "email",
] }
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
base64 = "0.22.1"
snafu = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "stream",
    #"native-tls",
    "rustls-tls",
    "blocking",
    "socks",
] }
tokio-socks = "0.5.2"
http = "1.4.0"
regex = "1.12.3"
email_address = "0.2.9"
futures = "0.3.32"
utf7-imap = "0.3.2"
imap-proto = "0.16.6"
mail-parser = { version = '0.11.2', features = ["serde"] }
# mail-send = "0.5.2"
tokio-rustls = { version = "0.26.4", default-features = false, features = [
    "ring",
    "tls12",
] }
timeago = "0.6.0"
ahash = "0.8.12"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
url = { version = "2.5.8", features = ["serde"] }
sysinfo = "0.38.4"
num_cpus = "1.17.0"
rand = "0.10.0"
encoding_rs = "0.8.35"
async-imap = { version = "0.11.2", default-features = false, features = [
    "runtime-tokio",
    "compress",
] }
webpki-roots = "1.0.6"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-pki-types = "1.14.0"
tokio-io-timeout = "1.2.1"
semver = "1.0.28"
governor = "0.10.4"
lru = "0.16.3"
mime_guess = "2.0.5"
hex = "0.4.3"
time = { version = "0.3.47", features = [
    "formatting",
    "parsing",
    "local-offset",
] }
rust-embed = "8.11.0"
murmur3 = "0.5.2"
autoconfig = "0.4.0"
urlencoding = "2.1.3"
dashmap = "6.1.0"
# Statically links OpenSSL by compiling from source, avoiding system library dependencies
openssl-sys = { version = "0.9.112", optional = true, features = ["vendored"] }
gethostname = "1.1.0"
itoa = "1.0.18"
html2text = "0.16.7"
bytes = "1.11.1"
dialoguer = "0.12.0"
console = "0.16.3"
toml = "0.9.8"
memmap2 = "0.9.10"
outlook-pst = { git = "https://github.com/rustmailer/outlook-pst-rs.git", branch = "main" }
compressed-rtf = "1.0.1"
codepage-strings = "1.0.2"
mail-send = "0.5.2"
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
blake3 = "1.8.4"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
fjall = { version = "3.1.3", features = ["lz4", "metrics", "bytes_1"] }
tantivy = { version = "0.26.0", features = ["zstd-compression"] }
[dev-dependencies]
#bincode = "1.3.3"
#secret-lib = "1.0.0"
tempfile = "3.27.0"
lettre = "0.11.21"
