[package]
name = "bichon-smtp"
version.workspace = true
edition.workspace = true


[dependencies]
bichon-core = { path = "../core" }
rcgen.workspace = true
rustls-pemfile.workspace = true
tokio-util.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true

[dev-dependencies]
#bincode = "1.3.3"
#secret-lib = "1.0.0"
tempfile = "3.27.0"
lettre = "0.11.21"